# TestDependencies

testdependencies/: pyproject.toml
testdependencies/tests/: test_testdependencies.py
