[tool.poetry]
name = "testdependencies"
version = "0.1.0"
description = ""
authors = ["daniel <djimenez@developair.es>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
click = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
